# Libraries for semantic analysis of SCI scripts.

package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "initial_pass",
    srcs = ["initial_pass.cpp"],
    hdrs = ["initial_pass.hpp"],
    deps = [
        "//scic/diagnostics",
        "//scic/parsers/sci:ast",
        "//scic/sem:symbol",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "build_code",
    srcs = ["build_code.cpp"],
    hdrs = ["build_code.hpp"],
    deps = [
        "//scic/codegen:code_generator",
        "//scic/parsers/sci:ast",
        "//util/status:status_macros",
        "//util/strings:ref_str",
        "//util/types:choice",
        "//util/types:overload",
        "//util/types:tmpl",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)
